Fix position of star in after-slides content on mobile.

--- a/css/src/_component-content-area.scss
+++ b/css/src/_component-content-area.scss
@@ -78,13 +78,17 @@
     }
 
     &.after-slides {
-        background: url(../img/bg-after-slider-cyan-lime.png) top center / cover no-repeat;
+        background: url(../img/bg-after-slider-cyan-lime.png) top right -100px / cover no-repeat;
         background-attachment: initial;
         color: white;
         @include padding-side( 160px, 80px );
         margin-top: -120px;
         position: relative;
         z-index: 1002;
+
+        @include respond-to( 500px ) {
+            background-position-x: center;
+        }
 
         @include respond-to( $bp-m ) {
             @include padding-side( 180px, 80px );
@@ -107,24 +111,24 @@
     }
 
     &.after-slides.lime-cyan {
-        background: url(../img/bg-after-slider-lime-cyan.png) top center / cover no-repeat;
+        background-image: url(../img/bg-after-slider-lime-cyan.png);
     }
 
     &.after-slides.grey-lime {
-        background: url(../img/bg-after-slider-grey-lime.png) top center / cover no-repeat;
+        background-image: url(../img/bg-after-slider-grey-lime.png);
     }
 
     &.after-slides.topo-cyan {
-        background: url(../img/bg-after-slider-topo-cyan.png) top center / cover no-repeat;
+        background-image: url(../img/bg-after-slider-topo-cyan.png);
     }
 
     &.after-slides.topo-lime {
-        background: url(../img/bg-after-slider-topo-lime.png) top center / cover no-repeat;
+        background-image: url(../img/bg-after-slider-topo-lime.png);
         color: $sea;
     }
 
     &.after-slides.topo-purple {
-        background: url(../img/bg-after-slider-topo-purple.png) top center / cover no-repeat;
+        background: url(../img/bg-after-slider-topo-purple.png) top right / cover no-repeat;
     }
 
     &.before-footer {
